--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -23,8 +24,10 @@
     <section class="tasks-container add-task-container">
         <h3>Tasks</h3>
         <div class="input-group mb-3">
-            <input type="text" class="form-control task-input" placeholder="Filter Tasks" aria-label="Username" aria-describedby="basic-addon1">
+            <input type="text" class="form-control task-input" placeholder="Filter Tasks" aria-label="Username" aria-describedby="basic-addon1" onchange="filterTasks(e)">
         </div>
+        <div class="tasks-list"></div>
+        <div class="clearBtn"></div>
     </section>
     <script src="app.js"></script>
 </body>
